--- a/src/AdeDl.BlazorApp/Shared/MainLayout.razor
+++ b/src/AdeDl.BlazorApp/Shared/MainLayout.razor
@@ -1,5 +1,21 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="container px-4">
-    @Body
+    
+    <div class="mt-5 mb-5">
+        <img src="/ade_logo.png"
+             class="d-inline-block align-content-center"
+             style="max-height: 50px"
+             alt="Agenzia delle Entrate"/>
+
+        <h2 class="d-inline align-content-center">
+            Download
+        </h2>
+
+    </div>
+
+    <div>
+        @Body
+    </div>
+    
 </div>
