--- a/src/AdeDl.BlazorApp/Pages/ActionPage.razor
+++ b/src/AdeDl.BlazorApp/Pages/ActionPage.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@page "/actionsPage"
 
 @using AdeDl.BlazorApp.Components
 
 <div class="mt-3">
-    <SelectCredentialForm/>
+    <ActionsComponent/>
 </div>
