--- a/src/AdeDl.BlazorApp/Pages/SelectCustomersPage.razor
+++ b/src/AdeDl.BlazorApp/Pages/SelectCustomersPage.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@page "/selectCustomers"
 
 @using AdeDl.BlazorApp.Components
 
 <div class="mt-3">
-    <SelectCredentialForm/>
+    <SelectCustomers/>
 </div>
