--- a/src/AdeDl.BlazorApp/Components/SelectCustomerRow.razor
+++ b/src/AdeDl.BlazorApp/Components/SelectCustomerRow.razor
@@ -24,5 +24,10 @@
                 @onclick="OpenFatture">
             Apri fatturazione
         </button>
+        <button role="button"
+                class="btn btn-sm btn-danger ms-2"
+                @onclick="Delete">
+            Elimina
+        </button>
     </td>
 </tr>
